--- a/Join_Discovery/.classpath
+++ b/Join_Discovery/.classpath
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-7-openjdk-amd64"/>
-	<classpathentry kind="lib" path="/home/rajmohan/workspace/java/Join_Discovery/Join_Discovery/jars/postgresql-9.3-1100.jdbc3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/TIDS/Orestes-Bloomfilter-master/dist/bloom-filter-1.0.3.jar"/>
+	<classpathentry kind="lib" path="D:/TIDS/Join_Discovery java project/Join_Discovery/jars/postgresql-9.4-1200.jdbc4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
